@@ -18,10 +18,123 @@
 			<groupId>org.rh.bdd</groupId>
 			<artifactId>bdd-booking-service-model</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.rh.bdd</groupId>
+			<artifactId>bdd-booking-service-war</artifactId>
+			<type>war</type>
+		</dependency>
+
 		<dependency>
 			<groupId>org.rh.bdd</groupId>
 			<artifactId>bdd-scenarios</artifactId>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- disable testing in the test phase -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.15</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<!-- enable testing in the integration-test phase -->
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<failIfNoTests>true</failIfNoTests>
+					<parallel>none</parallel>
+					<threadCount>1</threadCount>
+					<includes>
+						<include>**/*CucumberTest*.java</include>
+					</includes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<version>1.1.3</version>
+				<executions>
+					<execution>
+						<id>start-container</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-container</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<container>
+						<containerId>tomcat7x</containerId>
+						<artifactInstaller>
+							<groupId>org.apache.tomcat</groupId>
+							<artifactId>tomcat</artifactId>
+							<version>7.0.35</version>
+						</artifactInstaller>
+						<output>${project.build.directory}/logs/container.log</output>
+						<log>${project.build.directory}/logs/cargo-plugin.log</log>
+						<timeout>120000</timeout>
+						<systemProperties>
+						</systemProperties>
+					</container>
+					<configuration>
+						<properties>
+							<!-- -Dcom.sun.management.jmxremote.port=6000 -Dcom.sun.management.jmxremote.authenticate=false 
+								-Dcom.sun.management.jmxremote.ssl=false -->
+							<cargo.jvmargs>
+								-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000
+								-Xnoagent
+								-Xmx1024m
+								-XX:MaxPermSize=256m
+							</cargo.jvmargs>
+							<cargo.servlet.port>8080</cargo.servlet.port>
+						</properties>
+						<configfiles>
+
+						</configfiles>
+						<deployables>
+							<deployable>
+								<groupId>org.rh.bdd</groupId>
+								<artifactId>bdd-booking-service-war</artifactId>
+								<type>war</type>
+								<properties>
+									<context>ROOT</context>
+								</properties>
+							</deployable>
+						</deployables>
+					</configuration>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
+
+
+
 </project>
